argo/apps/wikijs/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wikijs
  namespace: post
  labels:
    app.kubernetes.io/name: wikijs
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: wikijs
  template:
    metadata:
      labels:
        app.kubernetes.io/name: wikijs
    spec:
      securityContext:
        runAsUser: 1000
        fsGroup: 1000
      containers:
        - name: wikijs
          image: ghcr.io/requarks/wiki:latest
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: config
              mountPath: /wiki/data
            - name: backup
              mountPath: /backup
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 30
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: longhorn-pvc-wikijs-config
        - name: backup
          persistentVolumeClaim:
            claimName: nfs-pvc-wiki
