argo/apps/wikijs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wikijs
  namespace: media
  annotations:
    metallb.io/ip-allocated-from-pool: default-address-pool
spec:
  selector:
    app: wikijs
  type: LoadBalancer
  loadBalancerIP: 10.0.0.35
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
