argo/apps/wikijs/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wikijs-ingress
  namespace: post
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: media-wikijs-redirect-https@kubernetescrd
spec:
  tls:
    - hosts:
        - wikijs.lan
      secretName: wildcard-lan-tls
  rules:
    - host: wikijs.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wikijs-service
                port:
                  number: 3000
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: wikijs-redirect-https
  namespace: post
spec:
  redirectScheme:
    scheme: https
    permanent: true
